# airflow-tutorial

./: Dockerfile  README.md  docker-compose.yaml
config/: airflow.cfg
dags/: etl_dummy.py  etl_dummy_complex.py  tutorial.py
etl-dummy/: .dockerignore  Dockerfile  pyproject.toml
etl-dummy/etl_dummy/: cli.py  storage.py
old_stuff/: etl_dummy_complex.py
